--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
     "node": "6.2.1"
   },
   "scripts": {
-    "test": "cd client && babel-tape-runner test/*.js | tap-spec",
+    "start": "node server/index",
+    "dev-nm": "nodemon server/index",
+    "dev-wp": "cd client && webpack-dev-server --hot --inline",
+    "test": "babel-tape-runner client/test/*.js | tap-spec",
     "build": "cd client && webpack --progress --profile --colors",
     "build:watch": "cd client && webpack --progress --profile --colors --watch",
-    "dev": "cd client && webpack-dev-server --hot --inline"
+    "build-css": "node-sass --include-path scss client/scss/main.scss public/resources/styles/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "prepare-deploy": "npm run build-css && npm run build"
   },
   "author": "Olwiba",
   "license": "GPL-3.0",
   "dependencies": {
+    "colors": "^1.1.2",
+    "material-ui": "^0.15.3",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
@@ -25,6 +33,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
     "enzyme": "^2.4.1",
+    "node-sass": "^3.8.0",
+    "nodemon": "^1.10.0",
     "react-addons-test-utils": "^15.2.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
